# ArefyevDenis

./: Factory_connector.pro  README.md  activ_objects.cpp  activ_objects.h  allocator.cpp  base_factory.h  configurate_obj.h  factory_morf_new.cpp  factory_morf_new.h  konsole_core.cpp  parsser_xml.cpp  parsser_xml.h
FTS/include/common/: config-win32.h  config.h  export_import_defs.h  os_define.h  typedefs.h
FTS/include/factory/: module_factory.h
FTS/src/core/: actions_pool.cpp  actions_pool.h  configs_pool.cpp  configs_pool.h  cross_thread.cpp  cross_thread.h  ics_controller_handler.cpp  ics_controller_handler.h  interface_struct.h  loggers_pool.cpp  loggers_pool.h  module_installer.cpp  module_installer.h  modules_grabber.cpp  modules_grabber.h  service_application_info.cpp  service_application_info.h  settings.cpp  settings.h
FTS/src/konsole_core/: konsole_core.cpp  konsole_core.h  main.cpp
FTS/src/konsole_core/CMake_Qt5/: CMakeLists.txt
FTS/src/modules/DataExchanger/udp_client/CMake_Qt5/: CMakeLists.txt
FTS/src/modules/DataExchanger/udp_client/CMake_Qt5/buildnumber/: buildnumber.h
FTS/src/modules/Video/GstVideoGraber/CMAKE_QT5/: CMakeLists.txt  cmake_install.cmake
FTS/src/modules/log/: main.cpp  (+11 more)
FTS/src/modules/log/CMake_Qt5/: CMakeLists.txt
FTS/src/utils/: buildnumber.sh  export_interfaces_describer.cpp  export_interfaces_describer.h  export_isc_parameter_describer.cpp  export_isc_parameter_describer.h  libraries_info_setter.cpp  libraries_info_setter.h  widget_info_describer.cpp  widget_info_describer.h
Factory_connector/: CMakeLists.txt  Factory_connector.pro  allocator.h  base_factory.cpp  configurate_obj.cpp  encapsulation_obj.cpp  encapsulation_obj.h  example_xml.cpp  example_xml.h  factory_morf.cpp  factory_morf.h  konsole_core.h  logger.cpp  logger.h  main.cpp
Factory_connector/core_window/: core_window.cpp  core_window.h  left_window.cpp  left_window.h  right_window.cpp  right_window.h
Factory_connector/core_window/widgets/: debug_2d.cpp  debug_2d.h
Factory_connector/mavlink/: mavlink_helpers.h
Factory_connector/mavlink/custom_packets/: custom_packets.h  mavlink_msg_roll_value.h  mavlink_msg_work_mode.h
Factory_connector/modules/: modules.h  optical_flow_mod.cpp  poll_mod.h  producer_stdout.cpp  qt_thread_mod.cpp  video_consumer.cpp  video_producer.cpp  video_producer.h  video_sender.h
Factory_connector/multi_thread/: base_qt_thread.cpp  base_qt_thread.h
Factory_connector/network/: tcp_sock_wrap.h
Factory_connector/serial/: fifo_mod.cpp  fifo_mod.h  joystick.cpp  joystick.h  listen_std_out.cpp
Full_qt/: Full_qt.pro  gapplication.cpp  gapplication.h  main.cpp
Full_qt/common/: afactory.cpp  afactory.h  cfactory.cpp  cfactory.h  encapsulate.cpp  encapsulate.h  logger.cpp  logger.h  signal_handler.cpp  signal_handler.h  unique_app.cpp  unique_app.h
Full_qt/derived/: core_application.cpp  core_application.h  freeze_table_widget.cpp  freeze_table_widget.h  q_qlabel.cpp  q_qlabel.h  q_qlineedit.cpp  q_qlineedit.h  q_qmenu.cpp  q_qmenu.h  q_qmenubar.cpp  q_qmenubar.h  q_table_view.cpp  q_table_view.h  q_table_widget.cpp  q_table_widget.h
Full_qt/dialog/: login_dialog.cpp  login_dialog.h
Full_qt/handler_datagram/: base_handler.cpp  base_handler.h  handler_datagram.cpp  handler_datagram.h
Full_qt/network/: discovery.cpp  discovery.h  tcp_server.cpp  tcp_server.h  udp_multiplexer.cpp  udp_multiplexer.h
Full_qt/widgets/: doc_widget.cpp  doc_widget.h  main_window.cpp  main_window.h  tab_widget.cpp  tab_widget.h  tree_widget.cpp  tree_widget.h
Library_dll_so/: Library_dll_so.pro
Library_dll_so/Load_library/: Load_library.pro  din_load_lib.cpp  din_load_lib.h  dinamyc_load_library.cpp  dinamyc_load_library.h  main.cpp
Library_dll_so/library_one/: library_one.cpp  library_one.h  library_one.pro
Library_dll_so/library_three/: library_three.cpp  library_three.h  library_three.pro
Library_dll_so/library_two/: library_two.cpp  library_two.h  library_two.pro
Sorting_big_file/: Sorting_big_file.pro  dbg.h  factory.cpp  factory.h  file_create.cpp  file_create.h  file_fill.cpp  file_fill.h  file_server.cpp  file_server.h  file_sort.cpp  file_sort.h  instance.h  keeper.cpp  keeper.h  main.cpp  parser_args.cpp  parser_args.h  profiling.cpp  profiling.h  qqfile.cpp  qqfile.h  test_factory.cpp  test_factory.h
cmake_lib_exe_drv/: CMakeLists.txt
cmake_lib_exe_drv/driver_sys/: CMakeLists.txt  Kbuild.in  sys_driver.c
cmake_lib_exe_drv/driver_two/: CMakeLists.txt  Kbuild.in  lkm_driver.c
cmake_lib_exe_drv/example_elf/: CMakeLists.txt  main.cpp
cmake_lib_exe_drv/modules_drv/: CMakeLists.txt  Kbuild.in  my_module_driver.c
cmake_lib_exe_drv/static_lib/: static_lib.h
cmake_subdirs/: CMakeLists.txt
cmake_subdirs/cuda_lib_shared/: CMakeLists.txt
cmake_subdirs/cuda_lib_shared/cuda_cu/: cuda_shared_lib.cu  cuda_shared_lib.h
cmake_subdirs/cuda_lib_shared/src_inc/: cpp_shared_lib.cpp  cpp_shared_lib.h
cmake_subdirs/cuda_lib_static/: CMakeLists.txt
cmake_subdirs/cuda_lib_static/cuda_cu/: cu_files.cu  cu_files.h
cmake_subdirs/cuda_lib_static/src_inc/: cpp_files.cpp  cpp_files.h  non_copyable.cpp  non_copyable.h
cmake_subdirs/example_elf/: CMakeLists.txt  main.cpp
cmake_subdirs/shared_lib/: CMakeLists.txt  shared_lib.cpp  shared_lib.h
cmake_subdirs/static_lib/: CMakeLists.txt  static_lib.cpp
cuda_sub_dir/: base_alg.h  cuda_sub_dir.pro
cuda_sub_dir/Test_cuda_lib/: Test_cuda_lib.pro  main.cpp
cuda_sub_dir/cuda_one/: cuda.cu  cuda_one.pro  wrap_cuda_one.cpp  wrap_cuda_one.h
cuda_sub_dir/include/: base_alg.h
mavlink/custom_packets/: mavlink.h  testsuite.h  version.h
modules/: logger_mod.cpp  logger_mod.h  modules.cpp  optical_flow_mod.h  poll_mod.cpp  producer_stdout.h  qt_thread_mod.h  server_mod.cpp  server_mod.h  video_consumer.h  video_sender.cpp  video_writer.cpp  video_writer.h
network/: tcp_server_wrap.cpp  tcp_server_wrap.h  tcp_sock_wrap.cpp  udp_sock_wrap.cpp  udp_sock_wrap.h
serial/: arduino_uno.cpp  arduino_uno.h  listen_std_out.h  pix4_serial.cpp  pix4_serial.h  serialport_wrap.cpp  serialport_wrap.h
(+136 files in other folders)
